add background image, hero and about section

--- a/index.html
+++ b/index.html
@@ -61,22 +61,49 @@
         </ul>
       </div>
     </nav>
-    <section>
-    </section>
-    <section>
-    </section>
-    <section>
-    </section>
-    <section>
-    </section>
-    <section>
-    </section>
-    <section>
-    </section>
-    <section>
-    </section>
-    <section>
-    </section>
+    <div class="content-container">
+        <img class="hero" src="assets/images/ccbb-hero.png" alt="A two tier cake covered in vanilla buttercream, decorated with red flowers and leaves. The cake is sitting on a wooden table, and the Cute Cakes by Bronagh logo is printed on the image.">
+        <section id="about">
+            <h1>
+                About
+            </h1>
+            <p>
+                I started cake decorating when I was 16, helping my Mom decorate our Christmas cake every year.
+            </p>
+            <p>
+                When family and friends saw the cakes they started asking me to make them cakes of their own, it was then I discovered my love and talent for cake making.
+            </p>
+            <p>
+                In 2013 I began studying Baking & Pastry Arts in DIT, to develop my skills in a more formal setting.
+            </p>
+            <p>
+                I spent a few years working in bakeries, building my skills and knowledge.
+            </p>
+            <p>
+                I pride myself in creating beautiful cakes suited exactly to your requirements, for any occasion, using only the best quality ingredients.
+            </p>
+            <p>
+                Why not get in touch via the contact form below?
+            </p>
+            <p>
+                <em>- Bronagh x</em>
+            </p>
+        </section>
+        <section>
+        </section>
+        <section>
+        </section>
+        <section>
+        </section>
+        <section>
+        </section>
+        <section>
+        </section>
+        <section>
+        </section>
+        <section>
+        </section>
+    </div>
 <!--Footer-->
     <footer class="footer">
         <ul>
