--- a/index.html
+++ b/index.html
@@ -85,11 +85,15 @@
             <p>
                 Why not get in touch via the contact form below?
             </p>
-            <p>
-                <em>- Bronagh x</em>
+            <p class="signature">
+                <em>- Bronagh</em>
             </p>
         </section>
-        <section>
+        <section id="menu">
+            <h1>
+                Menu
+            </h1>
+            <img class="menu-img" src="assets/images/ccbb-menu.png" alt="Cute cakes by Bronagh menu. Sponges: vanilla, chocolate, chocolate fudge, chocolate orange, carrot, lemon, coffee and raspberry & white chocolate. Biscuit cakes: plain chocolate biscuit, Baileys chocolate biscuit. Fillings and buttercreams: vanilla, chocolate, chocolate fudge, chocolate orange, peanutbutter chocolate, lemon, coffee and salted caramel. Decorations: buttercream piping, modelling chocolate figurines, fondant icing coverings and fondant figurines.">
         </section>
         <section>
         </section>
