--- a/index.html
+++ b/index.html
@@ -95,11 +95,273 @@
             </h1>
             <img class="menu-img" src="assets/images/ccbb-menu.png" alt="Cute cakes by Bronagh menu. Sponges: vanilla, chocolate, chocolate fudge, chocolate orange, carrot, lemon, coffee and raspberry & white chocolate. Biscuit cakes: plain chocolate biscuit, Baileys chocolate biscuit. Fillings and buttercreams: vanilla, chocolate, chocolate fudge, chocolate orange, peanutbutter chocolate, lemon, coffee and salted caramel. Decorations: buttercream piping, modelling chocolate figurines, fondant icing coverings and fondant figurines.">
         </section>
-        <section>
+        <section id="gallery">
+            <h1>
+                Gallery
+            </h1>
+            <h2 class="val-head">
+                Our seasonal Valentine's Day offering is available to order now!
+            </h2>
+            <p>
+                Box of 6 cupcakes €12
+            </p>
+            <p>
+                Box of 12 cupcakes €20
+            </p>
+            <p>
+                Valentine's Share Box €25
+            </p>
+            <ul class="val-list">
+                Includes:
+                <li>
+                    - 2 Raspberry & White Chocolate Ganache Cupcakes
+                </li>
+                <li>
+                    - 1 large Belgian Chocolate Biscuit Cake with Baileys
+                </li>
+                <li>
+                    - 2 round Belgian Chocolate Biscut Cake with Baileys
+                </li>
+                <li>
+                    - 2 Strawberries dipped in Chocolate, sitting on top of an Oreo dipped in Chocolate
+                </li>
+                <li>
+                    - 2 Donut shaped Cupcakes, covered in Chocolate Ganche
+                </li>
+                <li>
+                    - 2 Heart shaped Hot Chocolate Bombs, filled with Cadbury Hot Chocolate powder and Marshmallows
+                </li>
+                <li>
+                    - A selection of Handmade Chocolates
+                </li>
+            </ul>
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" src="/assets/images/gallery/valentinesbox.png" alt="variety vanentines themed box. Box includes: 2 raspberry and white chocolate cupcakes, 1 large baileys biscuit cake, 2 small baileys biscuit cake, 2 chocolate covered strawberries sitting on oreo, 2 chocolate covered donuts, 2 hot chocolate bombs and a selection of handmade chocolates.">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/valentinescupcakes1.jpg" alt="valentines cupcakes decorated with red and pink toppers, hearts and custom embossing">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/valentinescupcakes2.jpg" alt="valentines cupcakes decorated with red and pink toppers, hearts and custom embossing">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/butterflyflowerswedding.png" alt="White wedding cake with handmade white flowers and pink flowers and white butterflies.">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/elegantchristening.png" alt="Buttercream top tier, blue fondant bottom tier, decotated with white handmade flowers">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/crystalswanwedding.png" alt="4 tier white wedding cake decorated with white brush embroidery flowers and hand made pink flowers">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/dovesweddingbrush.png" alt="3 tier white wedding cake decorated with white brush embroidery flowers and handmade pink flowers">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/beautyandbeast5tier.png" alt="4 tier beauty and the beast themed cake top tier decorated as a crown, second tier hand made rose in glass, third tier The Beast's blue suit, fourth tier Belle's yellow dress.">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/beautybeast2tier.png" alt="3 tier Beauty and The Beast themed cake, first tier rose contained in glass, second tier handpainted stained glass, bottom tier Belle's yellow dress.">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/drwho.png" alt="3 tier Dr Who themed cake, top tier tardis crash landing into the cake, second tier Matt Smith Dr Who bow tie and blazer, bottom tier hand painted galaxy sky.">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/harrypotter.jpg" alt="Handmade fondant Harry Potter figurine">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/aliceinwonderland.png" alt="3 tier Alice in Wonderland themed cake, top tier is Mad Hatter's hat, second tier is decorated with pages from the book, bottom tier is decorated with the name Alice, flowers and Rabbt's pocket watch">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/superman.jpg" alt="Open shirt to reveal Superman's blue colour and logo">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/freddiebabyshark.jpg" alt="children's baby shark themed cake with fondant figurines">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/gabrielbabyshark.png" alt="2 tier children's baby shark themed cake">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="assets/images/gallery/friends.png" alt="Friends themed cake with fondant couch, coffee and custom figurine to match birthday girls appearence">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/bunny.jpg" alt="children's cake made to look like bunny">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/candydrip.png" alt="pink and yellow candy themed drip cake">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/dinosaurs.jpg" alt="dinosaur figurine scene cake">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/elephant.jpg" alt="christening cake with handmade fondant elephant figurine">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/farm.png" alt="children's farm yard themed cake with fondant figurines">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/giraffe.jpg" alt="blue cake decorated with name and handmade fondant giraffe and baloon figurines">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="assets/images/gallery/flowerchristening.png" alt="white christening cake decorated with purple flowers and sleeping baby">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/girlanddog.jpg" alt="white cake decorated with custom hand made fondant figurines to look like birthday girl and her dog">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/golfer.jpg" alt="golf themed cake topped with hand made giant golf ball">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/hennessy.jpg" alt="hennessy themed drip cake decorated with small bottles of hennessy and chocolate covered strawberries">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/horses.png" alt="horse themed cake with hand made fondant horse figurines">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/makeupcase.jpg" alt="make up themed cake with miniature hand made make up brush and pallette fontdant figurines">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/pariswatercolour.png" alt="Paris themed cake with hand painted Parisienne details and landmarks">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/pilotmanutd.jpg" alt="man united themed cake for a pilot, a handmade pilot figurine sits on top of the cake">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/pugcake.png" alt="Cake is carved and airbrushed to look like a pug">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/pugsurprise.png" alt="handmade fondant pug bursts out of cake, decorated with pink icing and sprinkles">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/sunflowers.jpg" alt="white cake decorated with fondant sunflowers">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/teapot.png" alt="tea party themed cake decorated with handmade fondant teapot and flowers">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/unicorncake.png" alt="cake decorated with white and rainbow buttercream to look like unicorn">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/unicornrainbow.jpg" alt="white cake topped with hand made fondant unicorn and rainbow">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/watercolourname.jpg" alt="watercolour cake decorated with hand painted flowers and a name">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/70thcupcakes1.jpg" alt="70th birthday cupcakes decorated with purple toppers and flowers with custom embossing">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/7thcupcakes2.jpg" alt="70th birthday cupcakes decorated with purple toppers and flowers with custom embossing">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/pilotcupcake.jpg" alt="pilot themed cupcakes with custom pilots uniform toppers">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/christmascollection.png" alt="seasonal christmas offering, all made from chocolate biscuit cake and covered with fondant to look like various characters. Characters include: Hot chocolate, Santa Claus, Mrs Claus, Christmas pudding, snowflake drip cake, Rudolph and snowman">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/christmasdripcake.jpg" alt="red, glittery Christmas themed cake topped with white drip icing and decorated with snowflakes">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/christmaspudding.jpg" alt="Chocolate biscuit cake molded and decorated to look like a traditional Christmas pudding">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/halloween4tier.jpg" alt="4 tier halloween themed cake. Top tier witches cauldron,  second tier spooky eyes on black, third tier zombie and fourth tier orange monster">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/halloweencharactercupcakes.jpg" alt="cupcakes with halloween character toppers. Toppers include: withch, frankenstein, vampire, zombie, pumpkin, spider">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/assets/images/gallery/halloweenchoccupcakes.jpg" alt="cupcakes topped with chocolate buttercream and halloween candies">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
         </section>
-        <section>
+        <section id="reviews">
+            <h1>
+                Reviews
+            </h1>
+            <p>
+                Absolutely beautiful cake. It was better that I could of imagined and
+                my sister didn't even want to cut into it, because it looked so good.
+                We got orange chocolate and raspberry and white choc and it went down a treat.
+                Thank you so much Bronagh I will definitely be in touch for the next party.
+            </p>
+            <p>
+                <em>- Danielle Gregg</em>
+            </p>
+            <p>
+                Thank you Bronagh for the recent choc biscuit cake you made for Robyn's
+                Christening and delivered to my door. It was a perfect match to my Pinterest
+                sourced inspiration and tasted delicious! You were a pleasure to deal with
+                making it hassle free. I highly recommend Bronagh for any cake needs you have.
+            </p>
+            <p>
+                <em>- Michelle Mc Donagh</em>
+            </p>
+            <p>
+                Amazing cake, so talented and so delish 😊 Will definitely order again! X
+            </p>
+            <p>
+                <em>- Jade Walker</em>
+            </p>
         </section>
-        <section>
+        <section id="faq">
+            <h1>
+                Frequently Asked Questions
+            </h1>
+            <h2>
+                Q) How much do the cakes cost?
+            </h2>
+            <p>
+                There is are no set prices on cakes outside of seasonal offerings
+                (ie. Christmas, Valentine's Day), as the price varies greatly from
+                cake to cake depending on ingredients, people to feed and detail. 
+                Consultations allow me to offer a variety of options catered to 
+                your wants and budget. Currently, my Valentine's offering is available.
+                6 cupcakes for €12, 12 cupcakes for €20 and share boxes for €25.
+            </p>
+            <h2>
+                How do I place an order?
+            </h2>
+            <p>
+                Simply use the "Contact" section of the website to send me an email and 
+                I will contact you to discuss your ideas. While seasonal offerings are on
+                you can use this feature to book directly. On both occasions please be mindful
+                of the "Calendar" feature on the website. When it indicates I am "fully booked", 
+                I am truly fully booked and cannot facilitate an order at this time.
+            </p>
+            <h2>
+                How far in advance should I book?
+            </h2>
+            <p>
+                I would recommend contacting me no later than one month in advance for smaller
+                cakes, as there is limited availability and spaces tend to fill up fast. For larger
+                cakes, I would recommend contacting me as soon as possible so that I can start
+                work on your design and book you in to avoid disappointment.
+            </p>
+            <h2>
+                Is delivery available?
+            </h2>
+            <p>
+                Delivery is available on a case by case basis, if I can facilitate it I can
+                deliver straight to your door. I am a one woman operation so occasionally I may
+                not have the time, but where I can I will provide delivery to your door/venue.
+            </p>
         </section>
         <section>
         </section>
