--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCgWBzHO8pvR14XkgiM411uZzP4i9CEbNc&callback=initMap"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+    <script type="text/javascript">
+        emailjs.init('user_VguXMS3gXpxEe4SNTclvo')
+    </script>
+    <script src="main.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Gotu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
     
@@ -44,7 +50,7 @@
             </a>
           </li>
           <li class="nav-item mr-2">
-            <a class="nav-link" href="#location">
+            <a class="nav-link" href="#pickup">
               Pick Up
             </a>
           </li>
@@ -61,8 +67,11 @@
         </ul>
       </div>
     </nav>
+<!--Body Content-->
     <div class="content-container">
+<!--Hero Image-->
         <img class="hero" src="assets/images/ccbb-hero.png" alt="A two tier cake covered in vanilla buttercream, decorated with red flowers and leaves. The cake is sitting on a wooden table, and the Cute Cakes by Bronagh logo is printed on the image.">
+<!--About-->
         <section id="about">
             <h1>
                 About
@@ -89,12 +98,14 @@
                 <em>- Bronagh</em>
             </p>
         </section>
+<!--Menu-->
         <section id="menu">
             <h1>
                 Menu
             </h1>
             <img class="menu-img" src="assets/images/ccbb-menu.png" alt="Cute cakes by Bronagh menu. Sponges: vanilla, chocolate, chocolate fudge, chocolate orange, carrot, lemon, coffee and raspberry & white chocolate. Biscuit cakes: plain chocolate biscuit, Baileys chocolate biscuit. Fillings and buttercreams: vanilla, chocolate, chocolate fudge, chocolate orange, peanutbutter chocolate, lemon, coffee and salted caramel. Decorations: buttercream piping, modelling chocolate figurines, fondant icing coverings and fondant figurines.">
         </section>
+<!--Gallery-->
         <section id="gallery">
             <h1>
                 Gallery
@@ -135,11 +146,11 @@
                     - A selection of Handmade Chocolates
                 </li>
             </ul>
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <div id="carousel-images" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    <li data-target="#carousel-images" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel-images" data-slide-to="1"></li>
+                    <li data-target="#carousel-images" data-slide-to="2"></li>
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -281,16 +292,17 @@
                         <img class="d-block w-100" src="/assets/images/gallery/halloweenchoccupcakes.jpg" alt="cupcakes topped with chocolate buttercream and halloween candies">
                     </div>
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <a class="carousel-control-prev" href="#carousel-images" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="sr-only">Previous</span>
                 </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <a class="carousel-control-next" href="#carousel-images" role="button" data-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                 </a>
             </div>
         </section>
+<!--Reviews-->
         <section id="reviews">
             <h1>
                 Reviews
@@ -320,6 +332,7 @@
                 <em>- Jade Walker</em>
             </p>
         </section>
+<!--FAQ-->
         <section id="faq">
             <h1>
                 Frequently Asked Questions
@@ -363,11 +376,84 @@
                 not have the time, but where I can I will provide delivery to your door/venue.
             </p>
         </section>
-        <section>
+<!--Map-->
+        <section id="pickup">
+            <h1>
+                Pick Up
+            </h1>
+            <div id="map"></div>
         </section>
-        <section>
+<!--Calendar-->
+        <section id="calendar">
+            <h1>
+                Calendar
+            </h1>
         </section>
-        <section>
+<!--Contact-->
+        <section id="contact">
+            <h1>
+                Contact
+            </h1>
+            <form id="form">
+                <div class="field">
+                    <label for="from_name">Name:</label>
+                    <input type="text" name="from_name" id="from_name" placeholder="Name">
+                </div>
+                <div class="field">
+                    <label for="email">Email:</label>
+                    <input type="text" name="email" id="email" placeholder="example@mail.com">
+                </div>
+                <div class="field">
+                    <label for="subject">Subject:</label>
+                    <select class="form-control" id="subject">
+                        <option>Subject</option>
+                        <option>Book a Consultation</option>
+                        <option>Place an order (Seasonal offerings only)</option>
+                        <option>General Query</option>
+                        <option>Other</option>
+                    </select>
+                </div>
+                <div class="field">
+                    <label for="pick_up">Preferred Pick Up Location</label>
+                    <select class="form-control" id="pick_up">
+                        <option>Preferred Pick Up Location</option>
+                        <option>Celbridge</option>
+                        <option>Leixlip</option>
+                        <option>Maynooth</option>
+                    </select>
+                </div>
+                <div class="field">
+                    <label for="message">Message:</label>
+                    <input type="text" name="message" id="message" placeholder="Type your message here:">
+                </div>
+                <div class="field">
+                    <label for="cake_required">cake_required</label>
+                    <input type="text" name="cake_required" id="cake_required">
+                </div>
+            
+            <input type="submit" id="button" value="Send Email">
+        </form>
+
+<!--
+            <form onsubmit="return sendMail(this);" class="contactform">
+                <input type="text" class="form-control" id="name" placeholder="Name">
+                <input type="email" class="form-control" id="email" placeholder="example@email.com">
+                <select class="form-control" id="pick_up">
+                    <option>Preferred Pick Up Location</option>
+                    <option>Celbridge</option>
+                    <option>Leixlip</option>
+                    <option>Maynooth</option>
+                </select>
+                <select class="form-control" id="subject">
+                    <option>Subject</option>
+                    <option>Book a Consultation</option>
+                    <option>Place an order (Seasonal offerings only)</option>
+                    <option>General Query</option>
+                    <option>Other</option>
+                </select>
+                <textarea class="form-control" id="message" rows="3" placeholder="Type message here:"></textarea>
+                <button type="button" class="button">Submit</button>
+            </form> -->
         </section>
     </div>
 <!--Footer-->
@@ -388,5 +474,8 @@
             </li>
         </ul>
     </footer>
+    <script src="assets/js/main.js"></script>
+    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCgWBzHO8pvR14XkgiM411uZzP4i9CEbNc&callback=initMap"></script>
 </body>
 </html>
